<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_rounded_white_16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/btn_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/action_close"
            android:src="@drawable/ic_baseline_close_24"
            app:layout_constraintBottom_toBottomOf="@id/tv_label_insert"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_label_insert"
            app:tint="@color/black" />

        <TextView
            android:id="@+id/tv_label_insert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:text="@string/label_insert_url"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_insert_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_18sdp"
            android:scrollbars="vertical"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintHeight_max="@dimen/_340sdp"
            app:layout_constraintTop_toBottomOf="@id/tv_label_insert"
            tools:itemCount="1"
            tools:listitem="@layout/item_add_url" />

        <Button
            android:id="@+id/btn_add_more_url"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:paddingHorizontal="@dimen/_16sdp"
            android:paddingVertical="@dimen/_8sdp"
            android:text="@string/action_add_more_url"
            android:textAllCaps="false"
            android:textColor="@color/black"
            app:cornerRadius="@dimen/_16sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rv_insert_url"
            app:strokeColor="@color/black" />

        <Button
            android:id="@+id/btn_post_all_url"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_18sdp"
            android:layout_marginBottom="@dimen/_16sdp"
            android:backgroundTint="@color/secondary"
            android:paddingHorizontal="@dimen/_16sdp"
            android:paddingVertical="@dimen/_8sdp"
            android:text="@string/action_add_post"
            android:textAllCaps="false"
            android:textColor="@color/black"
            app:cornerRadius="@dimen/_16sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_add_more_url" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>